docs : add password  attribute